# cxsentences

./: .Rbuildignore  DESCRIPTION  NAMESPACE  converting_to_r.R  cxsentences.Rproj  scraych_script.R
R/: cx_extra_functions.R  cx_setup.R  sentence_functions.R  zzz.R
inst/python/: Pipfile  pyproject.toml  tokenization_en.py  tokenization_no.py
inst/python2/: Pipfile  sentence_functions.py  tokenization_ru.py
man/: create_sentence_filtered_df.Rd  cx_extra_chart.Rd  cx_extra_create_df_for_info.Rd  cx_extra_reset_data.Rd  cx_extra_subset.Rd  cx_extra_tab_text.Rd  cx_indices_one_doc.Rd  cx_parse_terms.Rd  cx_setup.Rd  cx_shiny_validate.Rd  cx_validate_input.Rd  explore_sentence_filtered_df.Rd  get_filtered_doc_indices_from_py.Rd  get_filtered_sentences_from_one_doc_py.Rd  get_filtered_sentences_from_py.Rd  get_nested_indices.Rd  get_sentence_window_indices.Rd  tokenize_sentences_ru.Rd  tokenize_sentences_wrapper.Rd
